--- a/src/utils/styles/_theme.scss
+++ b/src/utils/styles/_theme.scss
@@ -4,14 +4,16 @@ $themes: (
     'bg-color': #202124,
     'input-box-color': #bdc1c6,
     'input-box-placeholder-color': white,
-    'input-box-border': 'ffffff33',
+    'input-box-border': #d3d3d3,
+    'border': #d3d3d3,
   ),
   lightTheme: (
     'text-color': #202124,
     'bg-color': #f5f5f5,
     'input-box-color': #353535,
     'input-box-placeholder-color': black,
-    'input-box-border': '#121212',
+    'input-box-border': #121212,
+    'border': #121212,
   ),
 );
 
