--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
 }
 .align-items-center {
-  align-items: 'center';
+  align-items: center;
 }
 .justify-content-center {
-  justify-content: 'center';
+  justify-content: center;
 }
