add gas prices + update darkmode toggle

--- a/src/utils/styles/_theme.scss
+++ b/src/utils/styles/_theme.scss
@@ -1,11 +1,11 @@
 $themes: (
   darkTheme: (
-    'text-color': #bdc1c6,
-    'bg-color': #202124,
+    'text-color': #edf2f6,
+    'bg-color': #03111c,
     'input-box-color': #bdc1c6,
     'input-box-placeholder-color': white,
     'input-box-border': #d3d3d3,
-    'border': #d3d3d3,
+    'border': #edf2f61a,
   ),
   lightTheme: (
     'text-color': #202124,
