--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,6 +9,21 @@
   flex: 1;
   display: flex;
   align-items: center;
+
+  .title {
+    font-size: 14px;
+    margin-bottom: 12px;
+    text-align: center;
+  }
+
+  .separator {
+    height: 1px;
+    width: 100%;
+    margin: 20px 0;
+    @include theme() {
+      background-color: theme-get('border');
+    }
+  }
 }
 
 .home-left-side {
