--- a/src/utils/styles/_theme.scss
+++ b/src/utils/styles/_theme.scss
@@ -4,7 +4,7 @@ $themes: (
     'bg-color': #03111c,
     'input-box-color': #bdc1c6,
     'input-box-placeholder-color': white,
-    'input-box-border': #d3d3d3,
+    'input-box-border': #2b3642,
     'border': #edf2f61a,
   ),
   lightTheme: (
