--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -1,3 +1,12 @@
+.h-100 {
+  height: 100%;
+}
+.w-100 {
+  width: 100%;
+}
+.flex-one {
+  flex: 1;
+}
 .d-flex {
   display: flex;
 }
@@ -10,4 +19,7 @@
 }
 .justify-content-center {
   justify-content: center;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
