--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -4,6 +4,9 @@
 .w-100 {
   width: 100%;
 }
+.w-50 {
+  width: 50%;
+}
 .flex-one {
   flex: 1;
 }
@@ -20,6 +23,12 @@
 .justify-content-center {
   justify-content: center;
 }
+.justify-content-space-around {
+  justify-content: space-around;
+}
 .cursor-pointer {
   cursor: pointer;
+}
+.position-relative {
+  position: relative;
 }
