add historical market data + some UI updates

--- a/src/utils/styles/_theme.scss
+++ b/src/utils/styles/_theme.scss
@@ -5,7 +5,7 @@ $themes: (
     'input-box-color': #bdc1c6,
     'input-box-placeholder-color': white,
     'input-box-border': #2b3642,
-    'border': #edf2f61a,
+    'border': #143752,
   ),
   lightTheme: (
     'text-color': #202124,
