--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -26,6 +26,9 @@
 .justify-content-space-around {
   justify-content: space-around;
 }
+.justify-content-space-between {
+  justify-content: space-between;
+}
 .cursor-pointer {
   cursor: pointer;
 }
