--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -17,10 +17,18 @@
     text-align: center;
   }
 
+  .coin-info {
+    img {
+      border-radius: 50%;
+      margin-right: 10px;
+      width: 20px;
+      height: 20px;
+    }
+  }
+
   .new-search-text {
     font-size: 10px;
     color: $mustard;
-    margin-bottom: 10px;
   }
 
   .no-results-text {
@@ -34,10 +42,17 @@
     top: 5px;
   }
 
-  .separator {
+  .separator-horizontal {
     height: 1px;
     width: 100%;
     margin: 20px 0;
+    @include theme() {
+      background-color: theme-get('border');
+    }
+  }
+  .separator-vertical {
+    width: 1px;
+    margin: auto 20px;
     @include theme() {
       background-color: theme-get('border');
     }
@@ -53,12 +68,6 @@
     margin-bottom: 6px;
     color: $mustard;
   }
-}
-
-.home-tweets-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .home-right-side {
