--- a/src/utils/styles/_theme.scss
+++ b/src/utils/styles/_theme.scss
@@ -6,6 +6,7 @@ $themes: (
     'input-box-placeholder-color': white,
     'input-box-border': #2b3642,
     'border': #143752,
+    'feature-container-background': #001a2c,
   ),
   lightTheme: (
     'text-color': #202124,
@@ -14,6 +15,7 @@ $themes: (
     'input-box-placeholder-color': black,
     'input-box-border': #121212,
     'border': #121212,
+    'feature-container-background': #e4e4e4,
   ),
 );
 
