--- a/src/features/TweetsSentiment/TweetsSentiment.scss
+++ b/src/features/TweetsSentiment/TweetsSentiment.scss
@@ -1,10 +1,17 @@
 .tweets-sentiment-container {
-  position: relative;
-
   .labels {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    font-size: '12px';
+  }
+}
+
+.tweets-container {
+  font-size: 10px;
+  height: 100px;
+  overflow: scroll;
+  margin-top: 20px;
+  padding: 0 20px;
+
+  li {
+    margin-bottom: 5px;
   }
 }
